--- a/components/Navigation/Header.module.scss
+++ b/components/Navigation/Header.module.scss
@@ -24,11 +24,8 @@
 
     .Logo {
       max-width: 14rem;
-      background-color: $bg-light;
-      padding: 0.5rem 1rem;
-      border-radius: 1rem;
+      // padding: 0.5rem 1rem;
       cursor: pointer;
-      box-shadow: 0 0 5px $color-pry;
     }
 
     svg {
