--- a/components/OurServices/OurServices.module.scss
+++ b/components/OurServices/OurServices.module.scss
@@ -2,6 +2,7 @@
 
 .Container {
   text-align: justify;
+  overflow-x: hidden;
 
   .Text {
     padding: 2rem;
